fix error visible

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -208,3 +208,10 @@ ul {
 .el-form-item--mini.el-form-item {
   margin-bottom: 5px;
 }
+
+
+
+
+.el-form-item__error {
+  z-index: 1;
+}
